[package]
name = "genesis-engine-lexicon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.50" , features = ["derive"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"


[lib]
name = "genesis_engine_lexicon"
path = "src/lib.rs"


[[bin]]
name = "genesis-engine-lexicon"
path = "src/main.rs"